[package]
name = "misskey_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = []
# logging = ["log"]

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
derive-getters = "0.5.0"
http = "1.2.0"
itertools = "0.13.0"
# log = {version = "0.4.27", optional = true}
native-tls = "0.2.11"
rand = "0.9.0"
serde = "1.0.198"
serde_derive = "1.0.201"
serde_json = "1.0.117"
uuid = {version = "1.12.1", features = ["v4"]}
