[package]
name = "misskey_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = []
# logging = ["log"]

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
derive-getters = "0.5.0"
http = "1.3.1"
itertools = "0.14.0"
# log = {version = "0.4.27", optional = true}
native-tls = "0.2.14"
rand = "0.9.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
uuid = {version = "1.16.0", features = ["v4"]}
# hyper = { version = "1", features = ["full"] }
