[package]
name = "misskey_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
async = ["tokio"]

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
derive-getters = "0.5.0"
http = "1.3.1"
itertools = "0.14.0"
rand = "0.9.2"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["io-util", "net"], optional = true}
uuid = {version = "1.18.0", features = ["v4"]}
