[package]
name = "misskey_client"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
async = ["tokio"]

[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
derive-getters = "0.5.0"
http = "1.3.1"
itertools = "0.14.0"
serde = "1.0.225"
serde_derive = "1.0.225"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["io-util", "net"], optional = true}
uuid = {version = "1.18.1", features = ["v4"]}
misskey_client_macroes = {version = "*", path = "../misskey_client_macroes"}
